# react-native-zstd

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-zstd.podspec  tsconfig.json  turbo.json
.circleci/: config.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativezstd/: ZstdModule.java  ZstdModule.kt  ZstdPackage.java  ZstdPackage.kt
android/src/newarch/: ZstdSpec.java
android/src/oldarch/: TestLibSpec.java  ZstdSpec.java
cpp/: ZstdHostObject.cpp  ZstdHostObject.h  react-native-zstd.cpp  react-native-zstd.h
cpp/jsi-utils/: JSIUtils.cpp  JSIUtils.h
example/: app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativezstd/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativezstd/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/reactnativezstd/newarchitecture/: MainApplicationReactNativeHost.java
example/android/app/src/main/java/com/example/reactnativezstd/newarchitecture/components/: MainComponentsRegistry.java
example/android/app/src/main/java/com/example/reactnativezstd/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
example/android/app/src/main/java/com/zstdexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/jni/: CMakeLists.txt  MainApplicationModuleProvider.cpp  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  AppDelegate.swift  File.swift  Podfile
example/ios/ZstdExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ZstdExample.xcodeproj/: project.pbxproj
example/ios/ZstdExample.xcodeproj/xcshareddata/xcschemes/: ZstdExample.xcscheme
example/ios/ZstdExample.xcworkspace/: contents.xcworkspacedata
example/ios/ZstdExampleTests/: ZstdExampleTests.m
example/src/: App.tsx
ios/: Zstd.h  Zstd.mm
ios/Zstd.xcodeproj/: project.pbxproj
src/: NativeZstd.ts  index.tsx
